AUS-3214 Fix problem of sidebar scrollbar realigning buttons in Firefox

--- a/ui/src/app/layout/modelview/components/sidebar/sidebar.component.scss
+++ b/ui/src/app/layout/modelview/components/sidebar/sidebar.component.scss
@@ -205,7 +205,7 @@ i.fa.fa-lg.fa-eye, i.fa.fa-lg.fa-compress {
 }
 
 #modelControlsDiv {
-    padding: 0.6em 1em 1em 0.4em;
+    padding: 0.6em 0.5em 1em 0.4em;
 }
 
 .btn-sm {
